Update utils.sh